k8s-files/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: tpaz1/web-app:v2
        ports:
        - name: web-port
          containerPort: 3000
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
