k8s-files/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        volumeMounts:
          - mountPath: /data/db
            name: mongo-storage 
        resources:
          requests:
            memory: 200Mi
            cpu: 100m
          limits:
            memory: 200Mi
            cpu: 100m
        ports:
        - name: mongo-port
          containerPort: 27017
          protocol: TCP
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
