k8s-files/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
     containers:
     - name: server
       image: tpaz1/server:v2
       resources:
         requests:
           memory: 200Mi
           cpu: 100m
       ports:
       - name: server-port
         containerPort: 3000
         protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  selector:
    app: server
  ports:
  - port: 3000
    targetPort: 3000
