k8s-files/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: tpaz1-web.com
    http:
      paths:
        - path: /api/?(.*)
          backend:
            serviceName: server-srv
            servicePort: 3000
        - path: /?(.*)
          backend:
            serviceName: client-srv
            servicePort: 3000
